<resources>
    <string name="app_name">Chatting</string>
    <string name="toolbar_title_chatting">채팅</string>
    <string name="toolbar_title_user">친구</string>
    <string name="toolbar_title_plus">더보기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--activity_my_profile_detail-->
    <string name="profile_music">프로필 음악</string>
    <string name="profile_name">이름</string>
    <string name="profile_name_edit">이름을 입력해 주세요.</string>
    <string name="profile_status_message">상태 메세지</string>
    <string name="profile_save_edit">완료</string>

    <string name="login_screen">로그인 화면</string>

    <string name="users">사용자</string>
    <string name="chatting">채팅</string>

    <string name="sign_in">회원가입</string>
    <string name="email">E-mail</string>
    <string name="password">password</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>

    <string name="go_chatting">채팅 이용하기</string>
    <string name="test">테스트입니다.</string>
    <string name="test_time">오후 11:05</string>

    <string name="text_not_read">1</string>
    <string name="delete_chatroom">채팅방 나가기</string>

</resources>