<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="5dp">

    <TextView
        android:id="@+id/tv_sendmsg_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_not_read"
        android:textSize="10sp"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/tv_chatroom_sendtime"
        app:layout_constraintEnd_toEndOf="@+id/tv_chatroom_sendtime" />

    <TextView
        android:id="@+id/tv_chatroom_sendmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border_sendmsg"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/test"
        android:textSize="15sp"
        android:maxWidth="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_chatroom_sendtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_time"
        android:textSize="10sp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_chatroom_sendmsg"
        app:layout_constraintEnd_toStartOf="@+id/tv_chatroom_sendmsg" />

</androidx.constraintlayout.widget.ConstraintLayout>