<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/style_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:cardCornerRadius="@dimen/message_size"
        android:layout_marginStart="@dimen/style_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/iv_chat_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_profile"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_chatroom_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users"
        android:textSize="@dimen/username_size"
        android:layout_marginStart="@dimen/style_margin"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_chatroom_receivemsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_receivemsg"
        android:paddingHorizontal="10dp"
        android:paddingVertical="@dimen/style_margin"
        android:text="@string/test"
        android:textSize="@dimen/message_size"
        android:layout_marginStart="@dimen/style_margin"
        android:maxWidth="250dp"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/tv_chatroom_username"/>

    <TextView
        android:id="@+id/tv_chatroom_receivetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/style_margin"
        android:text="@string/test_time"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_chatroom_receivemsg"
        app:layout_constraintStart_toEndOf="@+id/tv_chatroom_receivemsg" />

</androidx.constraintlayout.widget.ConstraintLayout>